tdf#134294: fix Chapter heading updates

A quick manual recheck seems to confirm, that this does not regress
tdf#118735, tdf#118049. I couldnt quite recheck tdf#118833, the "steps
to reproduce" dont quite work on master -- but I did find any obvious
regression there.

Change-Id: I407ac8c0a8222e3f8c74449a4ec2b9b27e8a3a20